Fixed header menu broken on restore from mobile size, added video, img links for energy and drilling scada usecases page

--- a/use-cases/use-cases.sass
+++ b/use-cases/use-cases.sass
@@ -736,8 +736,8 @@
             font-size: 56px
             font-weight: 600
 
-            @media screen and (max-width: 500px)
-                font-size: 40px
+            @media screen and (max-width: 599px)
+                font-size: 36px
 
         #scada-fullpage
             display: none
@@ -759,6 +759,7 @@
                 width: 67.9vw
                 height: 72.3vh
                 img
+                    width: 100%
                     border: 4px solid white
                     border-radius: 36px
 
@@ -788,12 +789,15 @@
                 padding-top: 50px
                 font-size: 36px
                 @media screen and (max-width: 599px)
+                    font-size: 32px
                     margin-bottom: 0
 
             h3
                 font-size: 28px
                 font-weight: 500
                 margin-bottom: 0
+                @media screen and (max-width: 599px)
+                    font-size: 20px
 
             p
                 font-size: 16px
@@ -928,8 +932,12 @@
         .scada-overview
             &::before
                 height: 110%
+
                 @media screen and (max-width: 959px)
                     height: 107%
+
+                @media screen and (max-width: 599px)
+                    top: -16px
 
             .img-comp-container
                 position: relative
@@ -1265,6 +1273,9 @@
                         .expansion-panel
                             padding: 34px
                             cursor: pointer
+
+                            @media screen and (max-width: 599px)
+                                padding: 16px
 
                             .expansion-header
                                 display: flex
